refactoring project and first template report