@@ -1,5 +1,5 @@
 ThisBuild / version := "0.1"
-ThisBuild / scalaVersion := "2.13.16"
+ThisBuild / scalaVersion := "2.12.15"
 
 lazy val root = (project in file("."))
   .settings(
@@ -12,18 +12,11 @@ Compile / mainClass := Some("copurchase.analysis.Main")
 //la classe sun.nio.ch.DirectBuffer, che non è esportata dal modulo java.base. Questo problema è comune con Java 16+ a causa delle restrizioni sui moduli.
 ThisBuild / fork := true
 ThisBuild / javaOptions += "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
-ThisBuild / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.Flat
 
 libraryDependencies ++= Seq(
-  "org.apache.spark" %% "spark-core" % "3.5.3",
-  "org.apache.spark" %% "spark-sql" % "3.5.2",
-
-  //lib utils to write csv
-  "com.github.mrpowers" %% "spark-daria" % "1.2.3",
+  "org.apache.spark" %% "spark-core" % "3.4.0",
+  "org.apache.spark" %% "spark-sql" % "3.4.0",
 
   //lib to read from gcp bucket (i.e. read input csv file)
   "com.google.cloud.bigdataoss" % "gcs-connector" % "hadoop3-2.2.7" % "provided"
 )
-libraryDependencies += "com.google.cloud.bigdataoss" % "gcs-connector" % "hadoop3-2.2.7" % "provided"
-
-//  sbt -J--add-exports=java.base/sun.nio.ch=ALL-UNNAMED run
